tests/build/cases/widget_new/missing_semi_before_when1.stderr
error: expected `;`
 --> cases/widget_new/missing_semi_before_when1.rs:8:9
  |
8 |         when *#is_pressed {
  |         ^^^^
