tests/build/cases/widget_new/missing_semi_before_when1.rs
use zero_ui::properties::{margin, states::is_pressed};
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        margin = 0 // missing ; here
        when *#is_pressed {
            margin = 20;
        }
    };
}
